[package]
name = "httpserv"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.4.1", features = ["rustls"] }
actix-files = "0.6.2"
actix-multipart = "0.7.2"
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["io"] }
sanitize-filename = "0.6.0"
clap = "4.4.13"
rustls = "0.23.26"
rustls-pemfile = "2.0.0"
tokio-rustls = "0.26.1"
